# mbps

./: README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: main.yml
src/mbps/: __init__.py  cli.py  compat.py  core.py  downloader.py  http.py  results.py  uploader.py  utils.py
src/speedtest_cli/: __init__.py  cli.py  core.py  downloader.py  exceptions.py  http.py  results.py  uploader.py  utils.py
tests/: test_mbps.py
