[project]
name = "speedtest-cli"
version = "2.1.4b1"
description = "Command line interface for testing internet bandwidth using speedtest.net"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
]

[project.scripts]
speedtest-cli = "speedtest_cli.cli:main"
speedtest = "speedtest_cli.cli:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
