[project]
name = "mbps"
version = "0.1.0"
description = "Command line interface for testing internet bandwidth using speedtest.net"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
]

[project.scripts]
mbps = "mbps.cli:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
